// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render draft state correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM uEoAW"
  >
    Draft
  </div>
</DocumentFragment>
`;

exports[`Label should render published state correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM dxqALS"
  >
    Published
  </div>
</DocumentFragment>
`;

exports[`Label should render requested state correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnxRM juNxhL"
  >
    Requested
  </div>
</DocumentFragment>
`;
